# MadRadar

./: .gitignore  .gitmodules  LICENSE  README.md
MATLAB/: Attacker_revB.m  DIAG_USRP_Attack_system.mlx  DIAG_USRP_Sensing.mlx  EVAL_SIM_attack_subsystem.mlx  EVAL_SIM_sensing_system.mlx  EVAL_USRP_attack_system.mlx  EVAL_USRP_sensing_system.mlx  FMCW_Emulator_revA.m  README.md  Radar_Signal_Processing_attacks.mlx  Radar_Signal_Processing_verification.mlx  Radar_Signal_Processor_revA.m  Radar_revB.m  SETUP_Compute_radar_settings.mlx  SETUP_detecting_randomization.mlx  SIM_attack_radar_simulation.mlx  SIM_sensing_system.mlx  Simulation_reconfigurable.m  Simulator_revB.m  Subsystem_attacking.m  Subsystem_spectrum_sensing.m  Target_revA.m  USRP_offline_victim_processing.mlx  characterization_functions.m  cpp_testbed.mlx  generate_USRP_Sample_Data.mlx  multple_graph_plotting.mlx  performance_characterization.mlx  performance_functions.m  victim_radar_simulation.mlx
MATLAB/config_files/: 100MHz.json  1GHz.json  20MHz.json  20MHz_USRP.json  20MHz_USRP_100us.json  20MHz_USRP_300us.json  20MHz_USRP_500us.json  20MHz_USRP_revB.json  4GHz.json  plot_config.json  test_config.json
MadRadar_USRP/: CMakeLists.txt  Config_FMCW.json  Config_uhd.json  Config_uhd_100MHz.json  Config_uhd_attack.json  Config_uhd_attack_100MHz.json  Config_uhd_attack_200us_to_400us.json  Config_uhd_attack_400us_to_500us.json  Config_uhd_attack_50us_to_200us.json  Config_uhd_victim_200us_to_400us.json  Config_uhd_victim_400us_to_500us.json  Config_uhd_victim_50us_to_200us.json  Config_uhd_victim_UWB.json  README.md  main.cpp
MadRadar_USRP/src/: Attacker.cpp  Attacker.hpp  BufferHandler.cpp  BufferHandler.hpp  CMakeLists.txt  FMCWHandler.cpp  FMCWHandler.hpp  JSONHandler.cpp  JSONHandler.hpp  RADAR.cpp  RADAR.hpp  USRPHandler.cpp  USRPHandler.hpp
MadRadar_USRP/src/attacking_subsystem/: AttackingSubsystem.cpp  AttackingSubsystem.hpp  CMakeLists.txt
MadRadar_USRP/src/sensing_subsystem/: CMakeLists.txt  CrossCorr.cpp  CrossCorr.hpp  EnergyDetector.cpp  EnergyDetector.hpp  SensingSubsystem.cpp  SensingSubsystem.hpp  SpectrogramHandler.cpp  SpectrogramHandler.hpp
